// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with-notifications hook withNotifications function should do nothing without notification 1`] = `
<div
  prop1="val1"
>
  Test component: 
  {}
</div>
`;

exports[`with-notifications hook withNotifications function should handle notification without data 1`] = `
<div
  prop1="val1"
  prop2="val2"
>
  Test component: 
  {
  "data_TOPIC": {}
}
</div>
`;

exports[`with-notifications hook withNotifications function should provide data from notification 1`] = `
<div
  prop1="val1"
  prop2="val2"
>
  Test component: 
  {
  "data_TOPIC": {
    "data": 1
  }
}
</div>
`;
